<resources>
    <string name="app_name">Home</string>
    <string name="tab_text_1">EQUIPMENT</string>
    <string name="tab_text_2">GRAPH</string>
    <string name="tab_text_3">CALCULATE</string>
    <string name="action_settings">Settings</string>
    <string name="action_Edit_Equip">Edit equipment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="euip_use">Electricity usage</string>
    <string name="unit"> XXX watt</string>
    <string name="expenses">Total XXX baht</string>
    <string name="euip_name">Name</string>
    <string name="time_used">XXX min"."</string>
    <string name="time_offset">time offset</string>
    <string name="unitcharge">Unit Charge </string>
    <string name="unit_price">XXXX baht/unit</string>
    <string name="used_day">Used XXX days</string>
    <string name="cal">Calculate</string>
    <string name="use1">use XXX watts/day</string>
    <string name="use2"><u>use XXX days/month</u></string>
    <string name="use3"><u>use XXX hr/day </u></string>
    <string name="timeunit1">hr/day</string>
    <string name="timeunit2">day/month</string>
    <string name="use4">Use</string>
    <string name="month">Month</string>
    <string name="show_data">Show All Data</string>
    <string name="type">Type</string>
    <string name="default_unit">Power</string>
    <string name="ability">Ability</string>
    <string name="alwayson">Always on</string>
    <string name="manual">Manual/On-Off</string>
    <string name="timeoffset">Time Offset</string>
    <string name="add">Add</string>
    <string name="add_data_title">Add more equipment?</string>
    <string name="add_title">Add Equipment</string>
    <string name="add_data_message">Are you sure to add this equipment?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="result_title">Your electricity fee this month is</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="app_regis">Register</string>
    <string name="login_title">Devahoy</string>
    <string name="username_title">Email</string>
    <string name="password_title">Password</string>
    <string name="password_confirm_title">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="register">Do not have an account? Register here</string>
    <string name="minimum_password">6 Characters</string>
    <string name="auth_failed">Authentic failed</string>
    <string name="welcome">Welcome you success fully login</string>
    <string name="login_error_message">Username or Password is incorrect.</string>
    <string name="register_error_message">Register failed, Try again!</string>
    <string name="register_password_error">Password does not match</string>
    <string name="register_success">Register Successful</string>
    <string name="Baht">Baht</string>

    <string name="welcome_message">Welcome to Devahoy</string>


    <string-array name="graph_type">
        <item>Total money</item>
        <item>Power used</item>
        <item>Time used</item>
    </string-array>

</resources>
