<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="@drawable/border3">

        <TextView
            android:id="@+id/name_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/euip_name"
            android:textSize="15sp"
            />


        <EditText
            android:id="@+id/hrPerDay"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:text="@string/use3"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/power_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:text="@string/unit"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/dayPerMonth"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/use2"
            android:textSize="14sp" />

    </RelativeLayout>
</LinearLayout>