<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="#ffff"
        android:paddingLeft="14dp"
        android:paddingBottom="8dp"
        android:paddingRight="10dp">


        <TextView
            android:id="@+id/name_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/euip_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/power_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/unit"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="0dp">

            <TextView
                android:id="@+id/hrPerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/power_cal"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:drawableRight="@drawable/ic_action_edit"
                android:onClick="clickHandler"
                android:text="@string/use3"
                android:textSize="12sp"
                android:layout_gravity="right"
                android:layout_marginBottom="5dp"/>


            <TextView
                android:id="@+id/dayPerMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="0dp"
                android:clickable="true"
                android:drawableRight="@drawable/ic_action_edit"
                android:onClick="clickHandler"
                android:text="@string/use2"
                android:textSize="12sp"
                android:layout_gravity="right"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>