<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_weight="1"
        android:background="#ffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/name_equip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/euip_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/power_equip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/unit"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/show_onOff_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                />

        </LinearLayout>


        <Switch
            android:id="@+id/on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/min_equip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/time_used"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="0dp"
            android:drawableLeft="@drawable/ic_action_add1"
            android:text="@string/time_offset"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>